# My-Helper-Functions

./: .gitignore  Helper_Functions.py  README.md  calc.py  cms_scrape.csv  employee.py  helper_functions.py  inferred_schema.py  logger_basic.py  logger_detailed.py  multiprocessing_example.py  open_example.txt  people.json  pyproject.toml  requirements.txt  simple.html  test_calc.py  test_deneme.py  test_employee.py  threading_example.py  vehicles.json
conf/: config.py  config.yaml
conf/files/: imagenet.yaml
package1/: file1.py
packaging-tutorial/: LICENSE  README.md  pyproject.toml
packaging-tutorial/src/helpers_mbk/: __main__.py  helpers.py
packaging-tutorial/tests/: test_frequent_functions.py
project1/: pyproject.toml  requirements.txt  requirements_dev.txt
project1/project1/: script.py
project1/tests/: test_project1.py
pytest/: calculator.py  conftest.py  demo.py  pytest.ini  test_calculation.py  test_demo.py
